hard-gists/4276757/run.log
=== Docker Run Log for 4276757 ===
Started at: Mi 29. Okt 14:34:59 CET 2025

[2025-10-29 14:35:00] START: Running container for 4276757
[2025-10-29 14:35:00] SUCCESS: Container 2bafe3b1cd1a1aa4634ef98c7f8a7433a9e9f33cfc00930a1110ed10ad267b69 started for 4276757
=== Container logs for 4276757 ===
  File "/snippet.py", line 12
    print "Updating %s db" % db_to_update
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4276757 ===
[2025-10-29 14:35:02] INFO: Container 2bafe3b1cd1a1aa4634ef98c7f8a7433a9e9f33cfc00930a1110ed10ad267b69 has stopped
